# SDL3Demo

./: CMakeLists.txt  main.cpp
ui/: IPanel.h  IUIRenderer.h  IUIState.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiState.cpp  ImGuiState.h  UIManager.cpp  UIManager.h
ui/Windows/: IPanel.h  MenuWindow.cpp  MenuWindow.h
ui/Windows/Panel/: GamePanel.cpp  GamePanel.h  HomePanel.h  SettingPanel.h
ui/widgets/: DemoWIndow.cpp  DemoWindow.h  MenuWindow.cpp  MenuWindow.h  WidgetAdapter.h
ui/widgets/Panel/: GamePanel.h  HomePanel.h  SettingPanel.h
